--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "react-native": "0.56.0"
   },
   "devDependencies": {
-    "babel-jest": "23.4.2",
-    "babel-preset-react-native": "^5",
-    "jest": "23.4.2",
+    "@babel/core": "^7.0.0-beta",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-preset-react-native": "5.0.2",
+    "jest": "^23.2.0",
     "react-test-renderer": "16.4.1"
   },
   "jest": {
     "preset": "react-native",
+    "transform": {
+        "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+    },
     "setupFiles": [
       "<rootDir>/node_modules/appcenter/test/AppCenterMock.js",
       "<rootDir>/node_modules/appcenter-analytics/test/AppCenterAnalyticsMock.js",
